samples/_failures_safe/1761466338_ac849b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bf1237f.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_9bf1237f.c:143: error: expected ‘{’ at end of input
